# protflow_riff_diff_rust

./: LICENSE  README.md  create_fragment_library.py  ffi_wrapper.py  structure_generation.py
examples/inputs/: in_local.json
riffdiff-rust-library/: Cargo.toml
riffdiff-rust-library/src/: lib.rs
rust-library/: Cargo.toml
rust-library/src/: lib.rs
structure_generator/: Cargo.toml
structure_generator/scripts/: parse_trb.py
structure_generator/src/: config.rs  main.rs  poses.rs  runners.rs  tools.rs
structure_generator/src/tools/: esmfold.rs  ligandmpnn.rs  protein_edits.rs  rfdiffusion.rs  rosetta.rs
structure_generator/tests/: input.json
structure_generator/tests/mocks/: mock_ligandmpnn.py  mock_rfdiffusion.py
structure_generator/tests/output/: ligandmpnn_scores.json  rfdiffusion_scores.json
structure_generator/tests/output/ligandmpnn/seqs/: basic_test_input_0000.fa
structure_generator/tests/output/rfdiffusion/output_pdbs/: basic_test_input_0000.trb
