[package]
name = "riffdiff_rust_library"
version = "0.1.0"
edition = "2024"
[lib]
crate-type = ["cdylib"]
[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
crossbeam-channel = "0.5.15"
csv = "1.4.0"
libc = "0.2.180"
memmap2 = "0.9.9"
num_cpus = "1.17.0"
numpy = "0.27.1"
pyo3 = {version = "0.27.2", features = ["extension-module"]}
rayon = "1.11.0"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-mpmc = "0.2.4"
