[package]
name = "structure_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
glob = "0.3"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
shell-words = "1.1" # For safe command line splitting
uuid = { version = "1.7", features = ["v4"] } # For generating unique IDs if needed
async-trait = "0.1.89"
